fix(ui): Assignee selector (#7744)
Includes the following:
- Adds match not found text to assignee selector
- Remove redundant css
- Fix vertical center alignment of avatars / icons
- Make Dropdown list items the same height
- add <hr> between teams and invite member button
- get rid of big space between dropdown and toggle on group details view

--- a/src/sentry/static/sentry/less/group-detail.less
+++ b/src/sentry/static/sentry/less/group-detail.less
@@ -165,20 +165,6 @@
     margin-bottom: 0;
   }
 
-  // loading indicator for the group needs extra fixing up.
-  .assignee-selector {
-    display: inline-block;
-
-    .loading {
-      margin: 0;
-
-      .loading-indicator {
-        left: auto !important;
-        right: 0 !important;
-      }
-    }
-  }
-
   &:before {
     position: absolute;
     display: block;
@@ -2748,18 +2734,6 @@ ul.crumbs {
 
     .meta {
       font-size: 13px;
-    }
-
-    .assignee-selector {
-      .dropdown-menu {
-        left: 0 !important;
-        right: auto !important;
-
-        &:before,
-        &:after {
-          display: none;
-        }
-      }
     }
 
     .short-id-box {
